# mining-on-massive-datasets-ptit-project

./: .dockerignore  .env.example  .gitignore  BOTTLENECK_ANALYSIS.md  Dockerfile  Dockerfile.api  Dockerfile.dashboard  Dockerfile.frontend  Dockerfile.setup  Dockerfile.spark-worker  Dockerfile.streaming  KAGGLE_LOGGING_GUIDE.md  KAGGLE_LOGGING_SETUP.md  KAGGLE_QUICK.md  Makefile  OPTIMIZATIONS.py  QUICKFIX.md  QUICK_REFERENCE.md  README.md  SPEEDUP_GUIDE_VI.md  TRAINING_GUIDE.md  USING_DEBUG_PACKAGE.md  add_logging_to_mba.py  apply_optimizations.py  debug_runner.py  docker-compose-hub.yml  docker-compose.dev.yml  docker-compose.yml  init-kafka-topics.sh  kaggle_mba_training.ipynb  kaggle_simple_train.py  main.py  mba_training.py  mba_training_paper.py  mba_training_simple.py  pyproject.toml  requirements.txt  run_commands.sh  run_mba_training.py  run_with_progress.py  (+2 more)
.github/workflows/: build-and-push.yml
benchmark/: README.md  curl-format.txt  e2e_latency.sql  install_k6.sh  kafka_consumer_test.sh  kafka_producer_test.sh  loadtest.js  log_resources.sh  query_db.py  report_generator.sh  run_all.sh
benchmark/results/: benchmark_analysis_20260521.md  benchmark_analysis_v5.md  during_api_20260521_224917.csv  during_kafka_20260521_225325.csv  during_kafka_20260521_225914.csv
config/: config.yml
configs/: sample_config.json
dependencies/: __init__.py  constant.py  logging.py  spark.py
docs/: RUN_GUIDE.md  architecture.md  benchmark_docs.md  build_covisited_matrix.md  implementation_plan.md  improvement_proposal_v1.md  kafka_setup.md  setup.md
docs/bug_report/: bug_report_v1.md  bug_report_v2.md
docs/improvement_proposal/: improvement_proposal_v2.md  improvement_proposal_v3.md  improvement_proposal_v4.md  improvement_proposal_v5.md
docs/literature_review/: You_only_train_once.docx  (+1 more)
excalidraw/: system_kpdll.excalidraw
frontend/: .gitignore  index.html  package-lock.json  vite.config.js
jobs/: mining_job.py
notebooks/: analyst.ipynb  create_val_set.py  eda.ipynb  eda.py  feature_engineering.ipynb  gru4rec.ipynb  sasrec.ipynb
postgres-init/: 01_create_tables.sql  02_cleanup_old_data.sql  cleanup_data.sh
reports/: BTL.tex  Bia.tex  Danh_sach_tai_lieu_tham_khao.bib  Tu_viet_tat.tex
slide/: HKUSTstyle.sty  slide.tex
src/api/: db.py  (+5 more)
(+190 files in other folders)
