[project]
name = "mining-on-massive-datasets-ptit-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka==0.13.0",
    "altair>=6.0.0",
    "booktype>=1.5",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "jupyter>=1.1.1",
    "kaggle>=2.0.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "plotly>=6.7.0",
    "polars>=1.39.3",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=23.0.1",
    "pyspark>=3.5.0,<4.0.0",
    "python-dotenv==1.1.1",
    "redis>=5.0.0",
    "seaborn>=0.13.2",
    "streamlit>=1.57.0",
    "uvicorn>=0.34.0",
]
