[project]
name = "mining-on-massive-datasets-ptit-project"
version = "0.1.0"
description = "OTTO Multi-Objective Recommender System"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv==1.1.1",
    "pybreaker>=1.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "psycopg2-binary>=2.9.12",
    "redis>=5.0.0",
    "aiokafka==0.13.0",
    "python-dotenv==1.1.1",
    "pandas>=3.0.1",
    "requests>=2.32.0",
    "tqdm>=4.67.3",
    "pybreaker>=1.0.0",
    "pyyaml>=6.0",
]

spark = [
    "pyspark>=3.5.0,<4.0.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv==1.1.1",
    "pybreaker>=1.0.0",
    "pyyaml>=6.0",
]

setup = [
    "pyspark>=3.5.0,<4.0.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv==1.1.1",
    "aiokafka==0.13.0",
    "redis>=5.0.0",
    "pybreaker>=1.0.0",
    "pyyaml>=6.0",
]

dashboard = [
    "streamlit>=1.57.0",
    "pandas>=3.0.1",
    "plotly>=6.7.0",
    "requests>=2.32.0",
    "python-dotenv==1.1.1",
    "streamlit-autorefresh>=0.3.0",
]

[tool.uv]
package = false